--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 * {
+  font-family: var(--font-urbanist), sans-serif;
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
@@ -7,7 +8,6 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Arial', sans-serif;
   color: #fff;
   display: flex;
   justify-content: center;
