--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
+
 * {
   font-family: var(--font-urbanist), sans-serif;
   margin: 0px;
@@ -95,10 +97,29 @@ body {
   transition: all 0.3s ease;
 }
 
+
+.material-symbols-rounded {
+  font-variation-settings: 'FILL' 0, 'wght' 600, 'GRAD' 0, 'opsz' 24;
+  margin-right: 4px;
+  font-size: 14px;
+}
+
+.back-btn {
+  padding: 8px 12px;
+  z-index: 9999;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .btn:hover {
   background-color: black;
   color: white;
   border: 2px solid yellow;
+  cursor: pointer;
 }
 
 @media (max-width: 768px) {
