--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 * {
   font-family: var(--font-urbanist), sans-serif;
   margin: 0px;
@@ -77,6 +79,9 @@ body {
 }
 
 .button-list {
+  padding-top: 8px;
+  padding-left: 20px;
+  padding-right: 20px;
   display: flex;
   flex-direction: column;
   gap: 18px;
@@ -85,12 +90,12 @@ body {
 .btn {
   background-color: yellow;
   color: black;
-  padding: 18px;
+  padding: 16px;
   text-align: center;
   text-decoration: none;
   border-radius: 30px;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 16px;
   border: 2px solid yellow;
   transition: all 0.3s ease;
 }
